# collins-go-cli

./: .bazelrc  .gitignore  .travis.yml  BUILD.bazel  README.md  WORKSPACE  datacenter.go  format.go  go.mod  go.sum  ipam.go  log.go  main.go  main_test.go  modify.go  modify_test.go  power.go  provision.go  query.go  query_test.go  release.sh  state.go  status.sh  util.go  util_test.go
assets/: TestQueryCLIGetByAttribute.json
cmd/collins/: BUILD.bazel  main.go
cmds/: BUILD.bazel  datacenter.go  format.go  global.go  helpers_test.go  ipam.go  log.go  middleware.go  modify_test.go  output.go  power.go  provision.go  query.go  query_test.go  util.go  util_test.go
cmds/assets/: TestQueryCLIGetGPU.json
collins/commands/: BUILD.bazel  datacenter.go  format.go  global.go  helpers_test.go  ipam.go  log.go  middleware.go  modify.go  modify_test.go  output.go  power.go  profiles.go  provision.go  query.go  query_test.go  state.go  util.go  util_test.go
collins/commands/assets/: TestQueryIssue50.json
collins/docs/: README.md  datacenter.txt  ipam.txt  provision.txt  query.txt
docs/: README.md  log.txt  modify.txt  power.txt  provision.txt  query.md  query.txt  state.txt
man/: log.1  power.1  query.1  state.1
src/: BUILD.bazel  format.go  modify.go  power.go  provision.go  query.go  query_test.go  state.go  util.go  util_test.go
