load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "datacenter.go",
        "format.go",
        "ipam.go",
        "log.go",
        "main.go",
        "modify.go",
        "power.go",
        "provision.go",
        "query.go",
        "state.go",
        "util.go",
    ],
    importpath = "cgit.xrt0x.com/xrt0x/collins-go-cli",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_logrusorgru_aurora//:go_default_library",
        "@com_github_urfave_cli//:go_default_library",
        "@in_gopkg_tumblr_go_collins_v0//collins:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)

go_binary(
    name = "collins-go-cli",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "main_test.go",
        "modify_test.go",
        "query_test.go",
        "util_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@com_github_bouk_monkey//:go_default_library",
        "@com_github_urfave_cli//:go_default_library",
        "@in_gopkg_tumblr_go_collins_v0//collins:go_default_library",
    ],
)

load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(name = "gazelle")
