load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "collins",
    visibility = ["//visibility:public"],
    pure = "on",
    srcs = ["main.go"],
    deps = [
      "//collins/commands:library",
      "@com_github_urfave_cli//:go_default_library",
    ],
    x_defs = {
      "main.version": "{STABLE_GIT_TAG}",
      "main.commit": "{STABLE_GIT_COMMIT}",
    },
)

load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(name = "gazelle")
