load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "library",
    srcs = [
        "datacenter.go",
        "format.go",
        "global.go",
        "ipam.go",
        "log.go",
        "middleware.go",
        "modify.go",
        "output.go",
        "power.go",
        "profiles.go",
        "provision.go",
        "query.go",
        "state.go",
        "util.go",
    ],
    importpath = "cgit.xrt0x.com/xrt0x/collins-go-cli/collins/commands",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_logrusorgru_aurora//:go_default_library",
        "@com_github_urfave_cli//:go_default_library",
        "@in_gopkg_tumblr_go_collins_v0//collins:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
        "@org_golang_x_crypto//ssh/terminal:go_default_library",
    ],
)

go_test(
    name = "test",
    srcs = [
        "helpers_test.go",
        "modify_test.go",
        "query_test.go",
        "util_test.go",
    ],
    data = [
        "assets/TestQueryCLIBasicWorkflow.json",
        "assets/TestQueryCLIGetByAttribute.json",
        "assets/TestQueryCLIGetGPU.json",
        "assets/TestQueryIssue50.json",
    ],
    embed = ["//collins/commands:library"],
    deps = [
        "@com_github_bouk_monkey//:go_default_library",
        "@com_github_urfave_cli//:go_default_library",
        "@in_gopkg_tumblr_go_collins_v0//collins:go_default_library",
    ],
)

load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(name = "gazelle")
